# schemars

schemars/: Cargo.toml
schemars/src/: lib.rs
schemars/src/json_schema_impls/: core.rs  mod.rs
schemars/tests/: custom_schema.rs
schemars_derive/: Cargo.toml
schemars_derive/src/: lib.rs
