[package]
name = "tamasfe-schemars"
description = "A fork of schemars, do not use!"
version = "0.8.0"
authors = ["tamasfe"]
edition = "2018"
license = "MIT"
build = "build.rs"

[dependencies]
schemars_derive = { version = "=0.8.0", package = "tamasfe-schemars_derive", optional = true, path = "../schemars_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dyn-clone = "1.0"

chrono = { version = "0.4", default-features = false, optional = true }
indexmap = { version = "1.2", features = ["serde-1"], optional = true }
either = { version = "1.3", default-features = false, optional = true }
uuid = { version = "0.8", default-features = false, optional = true }
smallvec = { version = "1.0", optional = true }
arrayvec = { version = "0.5", default-features = false, optional = true }
time = { version = "0.2", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
trybuild = "1.0"

[features]
default = ["derive"]

derive = ["schemars_derive"]

# Use a different representation for the map type of Schemars.
# This allows data to be read into a Value and written back to a JSON string
# while preserving the order of map keys in the input.
preserve_order = ["indexmap"]

impl_json_schema = ["derive"]
# derive_json_schema will be removed in a later version
derive_json_schema = ["impl_json_schema"]

ui_test = []

[[test]]
name = "chrono"
required-features = ["chrono"]

[[test]]
name = "indexmap"
required-features = ["indexmap"]

[[test]]
name = "either"
required-features = ["either"]

[[test]]
name = "uuid"
required-features = ["uuid"]

[[test]]
name = "smallvec"
required-features = ["smallvec"]

[[test]]
name = "arrayvec"
required-features = ["arrayvec"]

[[test]]
name = "schema_for_schema"
required-features = ["impl_json_schema"]

[[test]]
name = "ui"
required-features = ["ui_test"]

[package.metadata.docs.rs]
all-features = true
