[package]
name = "tamasfe-schemars_derive"
description = "A fork of schemars, do not use this!"
version = "0.8.0"
authors = ["tamasfe"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
serde_derive_internals = "0.25"

[dev-dependencies]
pretty_assertions = "0.6.1"
